# Genetic-AI

Agents/: A1.py  A2.py  A3.py  A4.py
Crew-AI/email_ai/: .env.example  INTEGRATION_SUMMARY.md  README.md  README_NEW.md  generated_email.md  pyproject.toml  report.md  test_generation.py
Crew-AI/email_ai/knowledge/: enhanced_daily_report.txt
Crew-AI/email_ai/src/email_ai/: crew.py  main.py
Crew-AI/email_ai/src/email_ai/config/: agents.yaml  tasks.yaml
Crew-AI/latest_ai_dev/: README.md  pyproject.toml  report.md
Crew-AI/latest_ai_dev/src/latest_ai_dev/: crew.py
Crew-AI/latest_ai_dev/src/latest_ai_dev/config/: agents.yaml
Crew-AI/latest_ai_dev/src/latest_ai_dev/tools/: custom_tool.py
LangChain/: a.txt
LangChain/Projects/: P1.py  P2.py  a.txt
LangChain/prac/: l1.py  l2.py  l3.py
LangChain/questions/: Lq1.py  Lq2.py  Lq3.py  Lq4.py  Lq5.py  a.txt
OOP Prac/: q2.py  q4.py
OOP Prac/Project/: p1.py  p2.py
OOP Prac/questions/: q1.py  q3.py  q5.py
latest_ai_dev/: generated_email.md
latest_ai_dev/src/latest_ai_dev/: main.py
latest_ai_dev/src/latest_ai_dev/config/: tasks.yaml
