[project]
name = "latest_ai_dev"
version = "0.1.0"
description = "latest-ai-dev using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "boto3>=1.39.2",
    "crewai[tools]>=0.140.0,<1.0.0",
]

[project.scripts]
latest_ai_dev = "latest_ai_dev.main:run"
run_crew = "latest_ai_dev.main:run"
train = "latest_ai_dev.main:train"
replay = "latest_ai_dev.main:replay"
test = "latest_ai_dev.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
